# jukebox

./: .env.example  .gitignore  .sample_env  AGENTS.md  README.md  app.py  conftest.py  library.example.json  mock_nfcreader.py  nfcreader.py  nfcreader_test.py  prek.toml  pyproject.toml  sample_library.json
.github/: dependabot.yml
.github/workflows/: bump-version.yml  protect-version-bump.yml  python.yml  release.yml
discstore/: app.py  command_handlers.py  commands.py  di_container.py  pyproject.toml
discstore/adapters/inbound/: api_controller.py  cli_controller.py  cli_display.py  config.py  interactive_cli_controller.py  ui_controller.py
discstore/adapters/inbound/api/: __init__.py  current_tag_router.py  discs_router.py  models.py  settings_router.py
discstore/adapters/inbound/ui_pages/: library.py  settings.py  sonos.py
discstore/adapters/outbound/: json_library_repository.py  text_current_tag_adapter.py
discstore/domain/entities/: __init__.py  current_disc.py  current_tag_status.py  disc.py  library.py
discstore/domain/repositories/: __init__.py
discstore/domain/use_cases/: __init__.py  add_disc.py  clear_current_disc_if_matches.py  edit_disc.py  get_current_disc.py  get_current_tag_status.py  get_disc.py  list_discs.py  mark_current_disc_known.py  remove_disc.py  resolve_tag_id.py  search_discs.py  update_current_disc_library_status.py
docs/: players.md  readers.md
docs/adr/: 0001-settings-validation-boundaries.md  0002-release-workflow.md
jukebox/: app.py  di_container.py  nfcreader.py  sonosplayer.py
jukebox/adapters/inbound/: cli_controller.py  config.py  config_part_2.py
jukebox/adapters/inbound/admin/: api_controller.py  cli_controller.py  cli_display.py  interactive_cli_controller.py  ui_controller.py
jukebox/adapters/outbound/: json_current_disc_adapter.py  json_library_adapter.py  sonos_discovery_adapter.py  text_current_tag_adapter.py
jukebox/adapters/outbound/players/: dryrun_player_adapter.py  sonos_player_adapter.py
jukebox/adapters/outbound/readers/: dryrun_reader_adapter.py  nfc_reader_adapter.py  pn532_reader_adapter.py
jukebox/admin/: app.py  cli_presentation.py  command_handlers.py  commands.py  di_container.py  errors.py  library_command_handlers.py  library_commands.py  pn532_command_handlers.py  pn532_commands.py  sonos_households.py
jukebox/domain/: errors.py
jukebox/domain/entities/: __init__.py  current_disc.py  current_tag_action.py  current_tag_session.py  current_tag_state.py  disc.py  library.py  playback_action.py  playback_session.py  playback_state.py  tag_event.py
jukebox/domain/ports/: __init__.py  library_port.py  reader_port.py
jukebox/domain/repositories/: __init__.py  current_disc_repository.py  current_tag_repository.py  library_repository.py
jukebox/domain/use_cases/: __init__.py  apply_current_tag_action.py  determine_action.py  determine_current_tag_action.py  handle_tag_event.py  sync_current_tag.py  transition_current_tag.py  transition_playback.py
jukebox/players/: dryrun.py  sonos.py  utils.py
jukebox/pn532/: __init__.py  profiles.py
jukebox/readers/: dryrun.py  nfc.py  utils.py
jukebox/settings/: __init__.py  change_metadata.py  definitions.py  dict_utils.py  entities.py  errors.py  file_settings_repository.py  migration.py  persisted_settings_normalization.py  repositories.py  resolve.py  runtime_resolver.py  runtime_validation.py  selected_sonos_group_repository.py  service_protocols.py  sonos_runtime.py  types.py  validation_rules.py  value_providers.py  view_utils.py
jukebox/shared/: config_utils.py  dependency_messages.py  errors.py  terminal_ui.py  timing.py
jukebox/sonos/: __init__.py  discovery.py  selection.py  service.py
pn532/: __init__.py  pn532.py  spi.py
shared_storage/: __init__.py  current_tag_paths.py  json_library_adapter.py  text_current_tag_adapter.py
tests/: nfcreader_test.py
tests/discstore/: test_app.py  test_command_handlers.py  test_di_container.py  test_discstore_app.py
tests/discstore/adapters/: test_cli_display.py
tests/discstore/adapters/inbound/: test_api_controller.py  test_cli_controller.py  test_cli_display.py  test_config.py  (+2 more)
tests/jukebox/: test_jukebox_app.py  test_jukebox_di_container.py
tests/jukebox/admin/: test_app.py  test_cli_presentation.py  test_command_handlers.py  test_di_container.py  test_library_command_handlers.py  test_pn532_command_handlers.py
tests/jukebox/architecture/: helpers.py  test_adapters_isolation.py  test_domain_isolation.py  test_domain_public_api.py  test_pn532_public_api.py  test_settings_public_api.py  test_sonos_public_api.py
tests/jukebox/players/: test_dryrun.py
tests/jukebox/pn532/: test_pn532_profiles.py
tests/jukebox/settings/: _helpers.py  test_definitions.py  test_definitions_consistency.py  test_environment_settings_overrides.py  test_file_settings_repository.py  test_resolve.py  test_runtime_validation.py  test_selected_sonos_group_repository.py  test_settings_service_mutation_validation.py  test_settings_service_mutations.py  test_settings_service_runtime_resolution.py  test_settings_service_sonos_resolution.py  test_sonos_runtime.py  test_validation_rules.py  test_value_providers.py
tests/jukebox/shared/: test_config_utils.py  test_errors.py  test_logger.py  test_terminal_ui.py
tests/jukebox/sonos/: test_selection.py
tests/players/: dryrun_test.py  player_utils_test.py  sonos_test.py
tests/readers/: dryrun_reader_test.py  nfc_test.py  reader_utils_test.py
(+64 files in other folders)
