[project]
name = "jukebox"
version = "0.1.0"
description = "jukebox and disc store bundle"
readme = "README.md"
requires-python = ">=3.7,<3.13"
dependencies = [
    "pydantic==2.5.3; python_version < '3.10'",
    "pydantic==2.10.6; python_version >= '3.10'",
    "soco==0.30.11",
    "typing_extensions; python_version=='3.7.*'",
]

[project.optional-dependencies]
api = [
    "fastapi==0.116.1; python_version >= '3.8'",
    "uvicorn==0.33.0; python_version == '3.8'",
    "uvicorn==0.33.0; python_version == '3.9'",
    "uvicorn==0.35.0; python_version >= '3.10'",
]
ui = [
    "pydantic==2.10.6; python_version >= '3.10'",
    "fastapi==0.116.1; python_version >= '3.10'",
    "fastui==0.7.0; python_version >= '3.10'",
]

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "pytest-mock==3.11.1",
    "ruff==0.12.8",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
extend-exclude = ["pn532/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["jukebox", "discstore", "pn532"]

[tool.hatch.build.targets.wheel]
include = ["jukebox", "discstore", "pn532"]

[project.scripts]
jukebox = "jukebox.app:main"
player = "jukebox.players.utils:main"
reader = "jukebox.readers.utils:main"
discstore = "discstore.app:main"
