[project]
name = "gukebox"
version = "1.0.0.dev13"
description = "A Jukebox to play music on speakers using 'CD' with NFC tag"
authors = [{ name = "Gudsfile" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic==2.13.3",
    "questionary==2.1.1",
    "soco==0.31.0",
    "typer==0.24.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["jukebox", "music", "nfc"]

[project.urls]
Repository = "https://github.com/Gudsfile/jukebox"

[project.optional-dependencies]
api = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
]
ui = [
    "gukebox[api]",
    "fastui==0.9.0",
    "python-multipart==0.0.26",
]
pn532 = [
  "pyserial==3.5",
  "spidev==3.8",
  # lgpio wheels not available for Python >= 3.13
  "lgpio==0.2.2.0; python_version < '3.13'",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "ruff==0.15.12",
    "ty==0.0.33",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
extend-exclude = ["pn532/"]

[tool.ruff.lint]
extend-select = [
    "SIM",
    "I",
    "UP",
    "G",
]

[tool.ty.src]
exclude = ["pn532/"]

[tool.ty.rules]
missing-argument = "error"

[build-system]
requires = ["uv_build>=0.8.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["jukebox", "discstore", "pn532"]
module-root = ""

[project.scripts]
gukebox = "jukebox.app:main"
jukebox = "jukebox.app:main"
jukebox-admin = "jukebox.admin.app:main"
