[project]
name = "discstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = ["pydantic==2.5.3"]

[project.optional-dependencies]
api = ["fastapi==0.116.1", "uvicorn==0.33.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["projetD"]

[tool.setuptools.package-dir]
projetD = "."

[project.scripts]
discstore = "discstore.app:main"
